@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-08-02T00:51:50Z",
+  "timestamp" : "2023-08-02T08:12:12Z",
   "count_outdated" : 2621,
   "uniques_outdated" : 996,
-  "count" : 2648,
-  "uniques" : 1011,
+  "count" : 2650,
+  "uniques" : 1012,
   "clones" : [
     {
       "timestamp": "2023-07-19T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count_decinc": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -112,6 +112,15 @@
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-08-02T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
