@@ -1,10 +1,10 @@
 {
-  "count": 27,
-  "uniques": 4,
+  "count": 28,
+  "uniques": 5,
   "clones": [
     {
       "timestamp": "2023-07-19T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -61,6 +61,11 @@
       "timestamp": "2023-07-30T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2023-08-02T00:00:00Z",
+      "count": 2,
+      "uniques": 1
     }
   ]
 }
